# fontgrepc

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  PLAN.md  README.md  TODO.md  WORK.md  build.rs  setup-github-workflows.sh
.github/workflows/: rust.yml
.specstory/history/: 2025-03-12_15-08-implementing-todo-md-tasks.md  2025-03-12_15-57-debugging-fontgrepc-panic-error.md  2025-03-12_15-57-debugging-rust-panic-type-mismatch-issue.md
benches/: cache_benchmarks.rs
github-workflows/: README.md  ci.yml  nightly.yml  pr.yml  release.yml
scripts/: build.sh  release.sh  tag.sh  test.sh  version.sh
src/: cache.rs  cli.rs  font.rs  lib.rs  main.rs  matchers.rs  query.rs  utils.rs
tests/: integration.rs
tests/integration/: cli_tests.rs  mod.rs
